--- a/views/public/html/Evaluation-OfficersEngine.html
+++ b/views/public/html/Evaluation-OfficersEngine.html
@@ -868,7 +868,7 @@ SIRE/CID experience
             </button>
           </div>
         <button id="write" class="btn btn-success no-print" >Create Evaluation for Candidate</button>
-        <button type="button" class="btn btn-primary no-print mt-4 mb-4" onclick="printDiv('printableArea')">Print Form</button>
+        <button type="button" class="btn btn-primary no-print mt-4 mb-4" style="visibility: hidden;" onclick="printDiv('printableArea')">Print Form</button>
 
        
     </div>
