--- a/views/public/html/Evaluation-OfficersEngine.html
+++ b/views/public/html/Evaluation-OfficersEngine.html
@@ -278,10 +278,7 @@
         <div class="border border-black-1 ">
           <div class="bg-light p-3">
             <h5 for="cargosHandled" class="form-label">CARGOS HANDLED</h5>
-            <select class="form-select" id="cargosHandled">
-              <option selected>&lt;SELECT&gt;</option>
-              <!-- Add more options as needed -->
-            </select>
+            <input id="cargosHandled" type="text" disabled>
           </div>
         </div>
       </div>
