--- a/views/public/html/Evaluation-OfficersEngine.html
+++ b/views/public/html/Evaluation-OfficersEngine.html
@@ -278,7 +278,7 @@
         <div class="border border-black-1 ">
           <div class="bg-light p-3">
             <h5 for="cargosHandled" class="form-label">CARGOS HANDLED</h5>
-            <input id="cargosHandled" type="text" disabled>
+            <input id="cargosHandled" type="text" >
           </div>
         </div>
       </div>
