--- a/views/public/html/Evaluation-OfficersEngineForm.html
+++ b/views/public/html/Evaluation-OfficersEngineForm.html
@@ -849,7 +849,7 @@ SIRE/CDI experience Right ship
               <div class="form-group">
                 <label for="grading">GRADING:</label>
                 <select class="form-control" id="grading" disabled>
-                  <option value="">Select a grade</option>
+                  <option value=""></option>
                   <option value="1">1</option>
                   <option value="2">2</option>
                   <option value="3">3</option>
