--- a/views/public/html/Evaluation-OfficersEngine.html
+++ b/views/public/html/Evaluation-OfficersEngine.html
@@ -277,7 +277,7 @@
       <div class="col-md-6 mb-5">
         <div class="border border-black-1 ">
           <div class="bg-light p-3">
-            <h5 for="cargosHandled" class="form-label">CARGOS HANDLED</h5>
+            <h5 for="cargosHandled" class="">CARGOS HANDLED</h5>
             <input id="cargosHandled" type="text" >
           </div>
         </div>
