--- a/views/public/html/Evaluation-OfficersEngineForm.html
+++ b/views/public/html/Evaluation-OfficersEngineForm.html
@@ -603,7 +603,7 @@ SIRE/CDI experience Right ship
 
     <div class=" border border-black-1 p-3">
         <h4 class="mb-4">OTHER PRACTICAL EXPERIENCE (tick the appropriate box)</h4>
-        <form style="font-size:12px">
+        <form style="">
             <div class="row">
                 <div class="col-md-6 ">
                   
