--- a/views/public/html/Evaluation-OfficersDeck.html
+++ b/views/public/html/Evaluation-OfficersDeck.html
@@ -167,7 +167,7 @@
                             </div>
                             <div class="form-check form-check-inline">
                                 <input class="form-check-input" type="checkbox" name="englishLevel" id="englishSatisf" value="satisfactory">
-                                <label class="form-check-label" for="englishSatisf">Satisf</label>
+                                <label class="form-check-label" for="englishSatisf">Satisfactory</label>
                             </div>
                             <div class="form-check form-check-inline">
                                 <input class="form-check-input" type="checkbox" name="englishLevel" id="englishPoor" value="poor">
@@ -268,6 +268,7 @@
               <div class="col">
                 <input
                   type="text"
+                  id="nationCrew"
                   class="form-control w-50"
                   placeholder="Enter nationality"
                 />
@@ -285,33 +286,33 @@
   <div class="row ">
     <div class="col-md-6 ">
      <div class="row">
-    <div class="col">
-      <div class="border border-black-1">
-        <div class="bg-light p-4 ">
-          <h5 class="form-label">CONTAINER EXPERIENCE/TEU (indicate number of vessels)</h5>
-          <div class="row row-cols-2 g-2 ">
-            <div class="col">
-              <input type="text" class="form-control" placeholder="< 1000">
-            </div>
-            <div class="col">
-              <input type="text" class="form-control" placeholder="1000 - 3000">
-            </div>
-            <div class="col">
-              <input type="text" class="form-control" placeholder="3000 - 6000">
-            </div>
-            <div class="col">
-              <input type="text" class="form-control" placeholder="6000 - 10000">
-            </div>
-            <div class="col">
-              <input type="text" class="form-control" placeholder="10000 - 15000">
-            </div>
-            <div class="col">
-              <input type="text" class="form-control" placeholder=">15000">
+        <div class="col ">
+            <div class="border border-black-1  ">
+              <div class="bg-light p-4 ">
+                <h5 class="form-label">CONTAINER EXPERIENCE/TEU (indicate number of vessels)</h5>
+                <div class="row row-cols-2 g-2 ">
+                  <div class="col">
+                    <input type="text" class="form-control" placeholder="< 1000" id="ceInput1">
+                  </div>
+                  <div class="col">
+                    <input type="text" class="form-control" placeholder="1000 - 3000" id="ceInput2">
+                  </div>
+                  <div class="col">
+                    <input type="text" class="form-control" placeholder="3000 - 6000" id="ceInput3">
+                  </div>
+                  <div class="col">
+                    <input type="text" class="form-control" placeholder="6000 - 10000" id="ceInput4">
+                  </div>
+                  <div class="col">
+                    <input type="text" class="form-control" placeholder="10000 - 15000" id="ceInput5">
+                  </div>
+                  <div class="col">
+                    <input type="text" class="form-control" placeholder=">15000" id="ceInput6">
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
   </div>
     </div>
  
