--- a/views/public/html/Evaluation-OfficersDeck.html
+++ b/views/public/html/Evaluation-OfficersDeck.html
@@ -350,112 +350,112 @@
   </form>
 
     <div class="" >
-          <div class="bg-gray-100 p-4 border border-dark-1 rounded-1  bg-light mb-4" style="font-size: 12px;">
-    <h3 class="   mb-4">PRACTICAL SKILLS</h3>
-    <div class="row ">
-    <div class="col-5 border pt-3">
-Number of Contracts in Ranks
-    </div>
-    <div class="col border p-2">
-       <input class="form-control">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-Type or size of the vessels served    </div>
-    <div class="col border p-2">
-       <input class="form-control">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-Last contract sign off date
-    </div>
-    <div class="col border p-2">
-       <input class="form-control">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-Type of main engine exp.
-    </div>
-    <div class="col border p-2">
-       <input class="form-control">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-Type of AUX engine exp.
-    </div>
-    <div class="col border p-2">
-       <input class="form-control">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-Cargo cranes/gear (marker) exp.
-    </div>
-    <div class="col border p-2">
-       <input class="form-control">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-Type of Cargo carried
-    </div>
-    <div class="col border p-2">
-       <input class="form-control">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-Type of Cargo pumps(tankers)
-    </div>
-    <div class="col border p-2">
-       <input class="form-control">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-Trading Area(limited/WW)
-    </div>
-    <div class="col border p-2">
-       <input class="form-control">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-Mixed crew (nationalities) exp.
-    </div>
-    <div class="col border p-2">
-       <input class="form-control">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-ECDIS experience in previous 12 months
-    </div>
-    <div class="col border p-2">
-       <input class="form-control">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-PSC experience
-    </div>
-    <div class="col border p-2">
-       <input class="form-control">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-SIRE/CID experience
-    </div>
-    <div class="col border p-2">
-       <input class="form-control">
-    </div>
-</div>
-  </div>
+        <div class="bg-gray-100 p-4 border border-dark-1 rounded-1  bg-light mb-4">
+            <h3 class=" ">PRACTICAL SKILLS</h3>
+            <div class="row ">
+            <div class="col-5 border pt-3">
+        Number of Contracts in Ranks
+            </div>
+            <div class="col border p-2">
+               <input class="form-control" id="psInput1">
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col-5 border pt-3">
+        Type or size of the vessels served    </div>
+            <div class="col border p-2">
+               <input class="form-control" id="psInput2">
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col-5 border pt-3">
+        Last contract sign off date
+            </div>
+            <div class="col border p-2">
+               <input class="form-control" id="psInput3">
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col-5 border pt-3">
+        Type of main engine exp.
+            </div>
+            <div class="col border p-2">
+               <input class="form-control"  id="psInput4">
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col-5 border pt-3">
+        Type of AUX engine exp.
+            </div>
+            <div class="col border p-2">
+               <input class="form-control"  id="psInput5">
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col-5 border pt-3">
+        Cargo cranes/gear (marker) exp.
+            </div>
+            <div class="col border p-2">
+               <input class="form-control"  id="psInput6">
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col-5 border pt-3">
+        Type of Cargo carried
+            </div>
+            <div class="col border p-2">
+               <input class="form-control"  id="psInput7">
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col-5 border pt-3">
+        Type of Cargo pumps(tankers)
+            </div>
+            <div class="col border p-2">
+               <input class="form-control" id="psInput8">
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col-5 border pt-3">
+        Trading Area(limited/WW)
+            </div>
+            <div class="col border p-2">
+               <input class="form-control"  id="psInput9">
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col-5 border pt-3">
+        Mixed crew (nationalities) exp.
+            </div>
+            <div class="col border p-2">
+               <input class="form-control"  id="psInput10">
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col-5 border pt-3">
+        ECDIS experience in previous 12 months
+            </div>
+            <div class="col border p-2">
+               <input class="form-control"  id="psInput11">
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col-5 border pt-3">
+        PSC experience
+            </div>
+            <div class="col border p-2">
+               <input class="form-control"  id="psInput12">
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col-5 border pt-3">
+        SIRE/CID experience
+            </div>
+            <div class="col border p-2">
+               <input class="form-control"  id="psInput13">
+            </div>
+        </div>
+          </div>
         <div >
 
     <div class="container mt-5 border border-black-1 p-3" >
@@ -673,11 +673,11 @@ SIRE/CID experience
 
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" name="regulations" id="regulationsYes" value="yes">
-                            <label class="form-check-label" for="regulationsYes">YES</label>
+                            <label class="form-check-label" for="regulations1Yes">YES</label>
                         </div>
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" name="regulations" id="regulationsNo" value="no">
-                            <label class="form-check-label" for="regulationsNo">NO</label>
+                            <label class="form-check-label" for="regulations1No">NO</label>
                         </div>
                     </div>
                      <label class="form-label">Tank cleaning/Hatch cleaning - Experience</label>
@@ -698,6 +698,7 @@ SIRE/CID experience
             <label class="block mb-2">Last Employer – Reason for Leaving</label>
             <input
               type="text"
+              id="reasonForLeaving"
               placeholder="Enter reason for leaving"
               class="w-full p-2 border rounded"
             />
@@ -712,7 +713,7 @@ SIRE/CID experience
           <h4 class="text-danger mb-3">INTERVIEWER COMMENTS</h4>
 
           <div class="mb-3">
-            <textarea class="form-control" rows="4"></textarea>
+            <textarea class="form-control" rows="4" id="intComments"></textarea>
           </div>
 
           <div class="row mb-3">
@@ -755,17 +756,18 @@ SIRE/CID experience
 
               <input
                 type="text"
+                id="intNow"
                 class="form-control"
                 placeholder="INTERVIEWER NAME"
               />
             </div>
             <div class="col-md-4 mb-3">
               <small class="p-2">SIGNATURE:</small>
-              <input type="text" class="form-control" placeholder="SIGNATURE" />
+              <input type="text" class="form-control" id="signature" placeholder="SIGNATURE" />
             </div>
             <div class="col-md-4 mb-3">
               <small class="d-block">DATE:</small>
-              <input type="date" class="form-control" />
+              <input type="date" id="dateNow" class="form-control" />
             </div>
           </div>
         </div>
@@ -881,23 +883,7 @@ function printDiv(divName) {
   
               function fetchValues() {
                   const ids = [
-                  'fullName', 'rankApplied', 'nationality', 'telephone', 'mobile',
-                'qualification', 'lastContract', 'englishGood', 'englishSatisf',
-                'englishPoor', 'vessel1', 'europe', 'usa', 'medSea', 'farEast', 'pgGoa',
-                'crewExperienceYes', 'crewExperienceNo', 'newNationality',
-                'drinkingYes', 'drinkingNo', 'medicalYes', 'medicalNo',
-                'umsVesselsYes', 'umsVesselsNo', 'bilgeSludgeYes', 'bilgeSludgeNo',
-                'pmsSoftwareYes', 'pmsSoftwareNo', 'reeferContainersYes',
-                'reeferContainersNo', 'extraordinaryCircumstancesYes',
-                'extraordinaryCircumstancesNo', 'congestedPassageYes',
-                'congestedPassageNo', 'dryDockYes', 'dryDockNo', 'csmPlanningYes',
-                'csmPlanningNo', 'yardDeliveryYes', 'yardDeliveryNo', 'safetyISMYes',
-                'safetyISMNo', 'auditsYes', 'auditsNo', 'ecaSecaOperationYes',
-                'ecaSecaOperationNo', 'garbageManagementYes', 'garbageManagementNo',
-                'fuelChangeoverYes', 'fuelChangeoverNo', 'operationProceduresYes',
-                'operationProceduresNo', 'regulationsYes', 'regulationsNo',
-                'leavingLast', 'commentsInt', 'accepted', 'rejected', 'grading',
-                'interviewerName', 'appliedDate', 'signNow'
+                  'fullName,rankApplied,nationality,telephone,mobile,qualification,lastContract,englishGood,englishSatisf,englishPoor,vessel1,europe,usa,medSea,farEast,pgGoa,crewExperienceYes,crewExperienceNo,natioCrew,ceInput1,ceInput2,ceINput3,ceInput4,ceInput5,ceINput6,drinkingYes,drinkingNo,medicalYes,medicalNo,psInput1,psInput2,psINput3,psINput4,psInput5,psInput6,psInput7,psINput8,psInput9,psInput10,psInput11,psInput12,psInput13,umsVesselsYes,umsVesselsNo,bilgeSludgeYes,bilgeSludgeNo,pmsSoftwareYes,pmsSoftwareNo,reeferContainersYes,reeferContainersNo,extraordinaryCircumstancesYes,extraordinaryCircumstancesNo,congestedPassageYes,congestedPassageNo,dryDockYes,dryDockNo,csmPlanningYes,csmPlanningNo,csmPlanningYes,csmPlanningNo,yardDeliveryYes,yardDeliveryNo,safetyISMYes,safetyISMNo.auditsYes,auditsNo,ecaSecaOperationYes,ecaSecaOperationNo,garbageManagementYes,garbageManagementNo,fuelChangeoverYes,fuelChangeoverNo,operationProceduresYes,operationProceduresNo,regulations1Yes,regulations1No,regulationsYes,regulationsNo,reasonForLeaving,intComments,accepted,rejected,grading,intNow,signature,dateNow'
                   ];
   
                   const evalObject = {};
