--- a/views/public/html/Evaluation-OfficersDeckForm.html
+++ b/views/public/html/Evaluation-OfficersDeckForm.html
@@ -792,7 +792,7 @@ SIRE/CID experience
             try {
                 // Replace with your actual API endpoint
                 const response = await axios.get(`https://nsnemo.com/candidate/viewevaluation/${evalId}/${candidateId}`);
-                const evaluationData = response.data.values;
+                const evaluationData = response.data;
                 console.log("Fetched Evaluation Data:", evaluationData);
     
                 // Call function to populate form fields with the evaluation data
