--- a/views/public/html/report.html
+++ b/views/public/html/report.html
@@ -1538,7 +1538,7 @@
                             
                             <th style="font-size: 8px;">Sign&nbsp;On</th>
                             <th style="font-size: 8px;">Sign&nbsp;Off</th>
-                            <th style="font-size: 8px;">Join&nbsp;Port</th>
+                            <th style="font-size: 8px;">Sign&nbsp;On&nbsp;Port</th>
                             <th style="font-size: 8px;">Vessel&nbsp;Name</th>
                             <th style="font-size: 8px;">Vessel&nbsp;Type</th>
                             <th style="font-size: 8px;">Wages</th>
